--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,11 @@ button:hover {
         flex-basis: 80%; /* Zajistí, že rámečky se zobrazí pod sebou na malých zařízeních */
     }
 }
+
+.airQuality {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #f0f8ff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
