--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
     background-color: #f4f4f9;
     margin: 0;
     padding: 20px;
